--- a/style.css
+++ b/style.css
@@ -10,8 +10,11 @@ body {
 }
 
 .navbar {
+    background-color: white;
     display: flex;
     align-items: center;
+    max-width: 100%;
+    padding: 0 15px;
     justify-content: space-between;
 }
 
@@ -23,7 +26,7 @@ body {
     width: 100%;
 }
 
-.nav__item {
+.button__primary {
     background-image: linear-gradient(
     to right,
     #ff512f 0%,
@@ -32,32 +35,514 @@ body {
     );
     color: #fff;
     border: none;
-    padding: 8px;
+    padding: 13px 20px;
     border-radius: 6px;
     cursor: pointer;
 }
 
-.nav__item:hover {
-    background-position: right center;
-    border: 2px solid blue; 
-    /* change the direction of the change here */
+.container {
+    width: 100%;
+    max-width: 100%;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+.hero__image__container {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.hero__image {
+    position: absolute;
+    width: 100%;
+    z-index: 2;
+    border-radius: 8px;
+    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.37);
+}
+
+.hero__image__shape{
+    position: absolute;
+    right: 2;
+}
+
+.hero__description__text {
+    font-family: 'Merriweather', serif;
+    font-size: 33px;
+    font-weight: 900;
+    color: #1d3557;
+    margin-top: 40px;
+    margin-bottom: 10px;
+    line-height: 35px;
+}
+
+.explore__menu__container {
+    max-width: 100%;
+}
+
+.explore__menu__text {
+    font-family: 'Merriweather', serif;
+    font-size: 29px;
+    font-weight: 900;
+    color: #1d3557;
+    margin-top: 40px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.food__card {
+    background-color: white;
+    border-radius: 8px;
+    margin-bottom: 15px;
+    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.507);
+}
+
+.food__image__container {
+    width: 100%;
+}
+
+.food__image {
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.food__card__description {
+    padding: 15px;
+}
+
+.explore__menu__view__more {
+    width: 100%;
+}
+
+.view__more__button {
+    width: 100%;
+    background-image: linear-gradient(
+    to right,
+    #ff512f 0%,
+    #dd2476 51%,
+    #ff512f 100%
+    );
+    font-family: 'Merriweather';
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    border: none;
+    padding: 13px 120px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 35px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.restaurant__text {
+    font-family: 'Merriweather', serif;
+    font-size: 29px;
+    font-weight: 900;
+    color: #1d3557;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    text-align: center;
+    line-height: 35px;
+}
+
+.restaurant__container {
+    max-width: 100%;
+    margin-bottom: 30px;
+}
+
+.restaurant__images__container {
+    width: 100%;
+    margin-bottom: 70px;
+}
+
+.restaurant__images__row__one,
+.restaurant__images__row__two {
+    width: 100%;
+    display: flex;
+    gap: 5px;
+}
+
+.restaurant__images__row__one {
+    align-items: baseline;
+    margin-bottom: 5px;
+}
+
+.restaurant__image__1,
+.restaurant__image__4 {
+    width: 100%;
+    height: 120px;
+}
+
+.restaurant__image__2,
+.restaurant__image__3 {
+    width: 100%;
+    height: 180px;
+}
+
+.restaurant__1,
+.restaurant__2,
+.restaurant__3,
+.restaurant__4 {
+    width: 100%;
+    height: 100%;
+    border-radius: 6px;
+}
+
+.stay__updated__container {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.stay__updated__text {
+    font-family: 'Merriweather', serif;
+    font-size: 29px;
+    font-weight: 900;
+    color: #1d3557;
+    margin-top: 40px;
+    margin-bottom: 5px;
+    text-align: start;
+}
+
+.email__input__container {
+    display: flex;
+}
+
+.email__input {
+    border: 1px solid #ee89a0;
+    background-color: #fcedf0;
+    padding-left: 10px;
+    padding-right: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    margin: 8px 0;
+}
+
+.update__button {
+    background-image: linear-gradient(
+    to right,
+    #ff512f 0%,
+    #dd2476 51%,
+    #ff512f 100%
+    );
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    border: none;
+    padding: 10px 25px;
+    margin: 0 8px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.quote__container {
+    position: relative;
+    margin: 70px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
+    width: 100%;
+    border-radius: 12px;
+    background-color: white;
+}
+
+.quote__image__container {
+    position: absolute;
+    width: 100%;
+    height: 200px;
+}
+
+.quote__image {
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+}
+
+.quote__image__overlay {
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    border-radius: 12px;
+    background-color: #0a4065;
+    opacity: 60%;
+}
+
+.quote__text {
+    text-align: center;
+    margin: 20px;
+    color: white;
+    z-index: 3;
+}
+
+.footer__container {
+    max-width: 100%;
+    background-image: linear-gradient(
+    to right,
+    #ff512f 0%,
+    #dd2476 51%,
+    #ff512f 100%
+    );
+    display: flex;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding-top: 80px;
+    padding-bottom: 70px;
+    padding-left: 33px;
+    padding-right: 33px;
+    flex-direction: column;
+    gap: 60px;
+    align-items: center;
+}
+
+.footer__brand {
+    width: 100%;
+}
+
+.footer__logo {
+    width: 100%;
+}
+
+.footer__item {
+    font-family: 'Merriweather', serif;
+    font-size: 18px;
+    font-weight: 500;
+    color: white;
+    margin-bottom: 3px;
 }
 
 @media (min-width: 768px) {
+    body {
+        width: 100%;
+    }
+
     .navbar {
         background-color: white;
-        padding-left: 20px;
-        padding-right: 20px;
+        justify-content: space-between;
+        max-width: 100%;
+        padding: 2px 30px;
+        width: 100%;
+    }
+
+    .hero__container {
+        padding: 0 40px;
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 20px;
+        align-items: center;
+    }
+
+    .hero__description {
+        padding-bottom: 180px;
+    }
+
+    .hero__description__text {
+        font-size: 30px;
+        line-height: ;
+    }
+
+    .explore__menu__container {
+        position: relative;
+        height: 550px;
+        max-width: 100%;
+        margin-top: 40px;
+        margin-left: 40px;
+        margin-right: 40px;
+        margin-bottom: 100px;
+        justify-content: center;
+    }
+
+    .explore__menu__bg__gradient {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        margin-top: -30px;
+        background-image: linear-gradient(
+        to right,
+            #ff512f 0%,
+            #dd2476 51%,
+            #ff512f 100%
+        );
+        transform: skewY(-5deg);
+        z-index: -3;
+    }
+
+    .explore__menu__text {
+        font-size: 35px;
+    }
+
+    .explore__menu__lists {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        padding: 0 30px;
+        margin-top: 80px;
+        justify-content: center;
+    }
+
+    .food__card__move__up {
+        margin-top: -20px;
+        margin-bottom: 30px;
+    }
+
+    .explore__menu__view__more {
+        display: flex;
+        justify-content: center;
+    }
+
+    .view__more__button {
+        font-size: 20px;
+        background: none;
+    }
+
+    .restaurant__container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        max-width: 100%;
+        padding: 0 40px;
+    }
+    
+    .restaurant__images__container {
+        padding: 50px 10px;
+        margin-right: 30px;
+    }
+
+    .restaurant__text {
+        font-size: 35px;
+        margin-right: 30px;
+        margin-left: 30px;
+    }
+
+    .stay__updated__container {
+        display: block;
+        max-width: 100%;
+        padding: 0 220px;
+        margin-top: -35px;
+    }
+
+    .stay__updated__text {
+        font-size: 35px;
+    }
+
+    .email__input {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 10px;
+        padding-right: 240px;
+    }
+
+    .quote__container {
+        width: 90%;
+        height: 300px;
+        margin: 70px auto;
+        max-width: 100%;
+    }
+
+    .quote__image__container {
+        width: 100%;
+        height: 300px;
+        justify-content: center;
+        align-items: center;
+        margin: 0 30px;
+    }
+
+    .quote__image__overlay {
+        width: 100%;
+        height: 300px;
+        border-radius: 12px;
+    }
+
+    .quote__text {
+        font-size: 35px;
+        margin: 49pxpx;
+    }
+
+    .footer__container {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 100%;
+        padding: 50px 120px;
+    }
+
+    .footer__brand {
+        width: 300px;
     }
 }
 
-@media (min-width: 1020px) {
+@media (min-width: 1400px) {
     .navbar__brand {
-        width: 150px;
+        width: 100px;
     }
 
     .nav__item {
-        padding: 20px;
+        padding: 15px;
+        font-size: 15px;
+    }
+
+    .button__primary {
+        padding: 18px 40px;
+        font-size: 16px;
+    }
+
+    .container {
+        max-width: 1250px;
+    }
+
+    .hero__description__text {
+        font-size: 50px;
+        line-height: 50px;
+    }
+    
+    .explore__menu__container {
+        height: 750px;
+    }
+
+    .explore__menu__text {
+        font-size: 50px;
+    }
+
+    .explore__menu__lists {
+        margin-top: 120px;
+    }
+
+    .view__more__button {
         font-size: 20px;
+    }
+
+    .restaurant__text {
+        font-size: 50px;
+        margin-right: 30px;
+        margin-left: 30px;
+        line-height: 50px;
+    }
+
+    .restaurant__image__1,
+    .restaurant__image__4 {
+        width: 100%;
+        height: 180px;
+    }      
+
+    .restaurant__image__2,
+    .restaurant__image__3 {
+        width: 100%;
+        height: 300px;
+    }
+
+    .stay__updated__text {
+        font-size: 50px;
+    }
+    
+    .update__button {
+        padding: 18px 40px;
+        font-size: 16px;
+    }
+
+    .stay__updated__container {
+        padding: 0 310px;
     }
 }
