--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
     align-items: center;
     max-width: 100%;
     padding: 0 15px;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
     justify-content: space-between;
 }
 
@@ -191,11 +193,16 @@ body {
 }
 
 .stay__updated__container {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    place-content: center;
     margin: 0 auto;
+    width: 100%;
 }
 
 .stay__updated__text {
+    width: 98%;
+    margin: 0 auto;
     font-family: 'Merriweather', serif;
     font-size: 29px;
     font-weight: 900;
@@ -207,13 +214,16 @@ body {
 
 .email__input__container {
     display: flex;
+    justify-content: start;
+    width: 98%;
+    margin: 0 auto;
 }
 
 .email__input {
     border: 1px solid #ee89a0;
     background-color: #fcedf0;
     padding-left: 10px;
-    padding-right: 40px;
+    padding-right: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 5px;
@@ -232,7 +242,7 @@ body {
     font-weight: 500;
     border: none;
     padding: 10px 25px;
-    margin: 0 8px;
+    margin-left: 10px;
     border-radius: 6px;
     cursor: pointer;
 }
@@ -420,12 +430,16 @@ body {
     .stay__updated__container {
         display: block;
         max-width: 100%;
-        padding: 0 220px;
         margin-top: -35px;
     }
 
     .stay__updated__text {
         font-size: 35px;
+        width: 90%;
+    }
+
+    .email__input__container {
+        width: 90%;
     }
 
     .email__input {
@@ -535,14 +549,15 @@ body {
 
     .stay__updated__text {
         font-size: 50px;
+        width: 49%;
+    }
+
+    .email__input__container {
+        width: 49%;
     }
     
     .update__button {
         padding: 18px 40px;
         font-size: 16px;
-    }
-
-    .stay__updated__container {
-        padding: 0 310px;
     }
 }
