--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ section {
     font-size: 33px;
     font-weight: 900;
     color: #1d3557;
-    margin-top: 40px;
+    margin-top: 30px;
     margin-bottom: 10px;
     line-height: 35px;
 }
@@ -219,7 +219,9 @@ section {
     font-size: 29px;
     font-weight: 900;
     color: #1d3557;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -10px;
     text-align: start;
     width: 100%;
 }
@@ -370,7 +372,7 @@ section {
         margin-top: 40px;
         margin-left: 40px;
         margin-right: 40px;
-        margin-bottom: 100px;
+        margin-bottom: 60px;
         justify-content: center;
     }
 
@@ -394,8 +396,10 @@ section {
     }
 
     .explore__menu__lists {
+        width: 100%;
         display: flex;
-        align-items: center;
+        justify-content: space-evenly;
+        flex-direction: row;
         gap: 20px;
         padding: 0 30px;
         margin-top: 80px;
@@ -438,6 +442,7 @@ section {
 
     .email__text {
         font-size: 35px;
+        margin-top: -80px;
     }
 
     .email__input__container {
@@ -458,14 +463,14 @@ section {
 
     .quote__container {
         width: 90%;
-        height: 300px;
+        height: 400px;
         margin: 70px auto;
         max-width: 100%;
     }
 
     .quote__image__container {
         width: 100%;
-        height: 300px;
+        height: 400px;
         justify-content: center;
         align-items: center;
         margin: 0 30px;
@@ -473,7 +478,7 @@ section {
 
     .quote__image__overlay {
         width: 100%;
-        height: 300px;
+        height: 400px;
         border-radius: 12px;
     }
 
@@ -528,7 +533,15 @@ section {
     }
 
     .explore__menu__lists {
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: row;
         margin-top: 120px;
+    }
+
+    .food__card__move__up {
+        margin-top: -30px;
+        margin-bottom: 40px;
     }
 
     .view__more__button {
@@ -561,5 +574,17 @@ section {
     .email__button {
         padding: 18px 40px;
         font-size: 16px;
+    }
+
+    .quote__container {
+        height: 500px;
+    }
+
+    .quote__image__container {
+        height: 500px;
+    }
+
+    .quote__image__overlay {
+        height: 500px;
     }
 }
